[[Fries]] → [[Westlaauwers Frais|Fries]] ([[Westlaauwers Frais]])

--- a/Noordhoeks.mw
+++ b/Noordhoeks.mw
@@ -39,7 +39,7 @@
 |et [[Latainse alfabet|Latiens alfabet]]
 |-
 |Taelstaotus
-|et Noordhoeks is een dialekt van et [[Fries]]; gien erkenning
+|et Noordhoeks is een dialekt van et [[Westlaauwers Frais|Fries]]; gien erkenning
 |-
 |Taelkode ISO 639-1
 |n.v.t.
@@ -50,9 +50,9 @@
 |Taelkode ISO 639-3/DIS
 |n.v.t.
 |}
-Et '''Noordhoeks''', ok wel '''Noordkleifries''' nuumd, is ien van de vier grote dialekten van et [[Fries]] en wodt spreuken in et noordoosten van de perveensie [[Frieslaand]], een gebied dat roegweg begreensd wodt deur et [[Lauwersmeer]] in et oosten, et [[Wad]] in et noorden, [[Et Bildt]] in et westen en een daenkbeeldige liende van [[Liwwadden]] over [[Birdaard]] en [[Dokkum]] naor [[Engwierum]] in et zuden.
+Et '''Noordhoeks''', ok wel '''Noordkleifries''' nuumd, is ien van de vier grote dialekten van et [[Westlaauwers Frais|Fries]] en wodt spreuken in et noordoosten van de perveensie [[Frieslaand]], een gebied dat roegweg begreensd wodt deur et [[Lauwersmeer]] in et oosten, et [[Wad]] in et noorden, [[Et Bildt]] in et westen en een daenkbeeldige liende van [[Liwwadden]] over [[Birdaard]] en [[Dokkum]] naor [[Engwierum]] in et zuden.
 
-Et Noordhoeks wodt spreuken deur naor schatting zoe'n 39.000 meensken in de perveensie [[Frieslaand]]; hoe veul [[Friezen]] daorbuten Noordhoeks praoten is niet dudelik. 
+Et Noordhoeks wodt spreuken deur naor schatting zoe'n 39.000 meensken in de perveensie Frieslaand; hoe veul [[Friezen]] daorbuten Noordhoeks praoten is niet dudelik. 
 
 Et Noordhoeks wiekt niet slim veul of van et [[Wooldfries]] dat ok wel zien wodt as de noordelike variaant dervan, in stee van as zelsstaandig heufddialekt. Van oorsprong is et Noordhoeks, dat spreuken wodt in et kleigebied in et noorden van de [[Woolden]], een overgangsvorm tussen et [[Kleifries]] en et [[Wooldfries]]. Nuver genog liekt et westelike Noordhoeks, dat greenst an et [[Kleifries]]e gebied, minder op et [[Kleifries]] as et oostelike Noordhoeks. Dat komt omdat et [[Wooldfries]] staodigan et Noordhoekse gebied tussen [[Liwwadden]] en [[Dokkum]] indringt, mar niet dat in et oosten van [[Dokkum]]. Zo kan et bi'jgelieks, dat der in et westen van [[Dokkum]] et Wooldfriese woord "tûme" en in et oosten van Dokkum et Kleifriese "tomme" bruukt wodt. Typisch Noordhoekse vormen bin bi'jgelieks: "''muolle''" veur "mûle", "''buosse''" veur "bûse" en "''buotter''" veur "bûter".
 
