[[Fries]] → [[Westlaauwers Frais|Fries]] ([[Westlaauwers Frais]])

--- a/Grunnegs_(Westerkertiers).mw
+++ b/Grunnegs_(Westerkertiers).mw
@@ -8,9 +8,9 @@ Dizze ziede kin zain worden as de '''Westerkertaaierse toalwiezer''' (Westerkert
 <center>''Van noe oaf aan wordt der op dizze ziede in t Westerkertiers schreven.''</center>
 
 
-t [[Westerkertiers]] wordt voak zien as n dialekt van t [[Grunnings]], moar is eiglek zo aans dat t ok as apaarte dialektgroep zien worden kin. De typisch Grunningse tweeklanken ai, ou en ui kommen niet vör ien t Westerkertiers. Vör aander Grunningers klinkt t Westerkertiers veul Hollaandser, moar dat komt niet deur de ienvloed van t Hollaands, moar van t [[Fries]]. t Westerkertiers is den ok staark verwant an t Woldfries, dat verder noar t westen toe proat wordt. 
+t [[Westerkertiers]] wordt voak zien as n dialekt van t [[Grunnings]], moar is eiglek zo aans dat t ok as apaarte dialektgroep zien worden kin. De typisch Grunningse tweeklanken ai, ou en ui kommen niet vör ien t Westerkertiers. Vör aander Grunningers klinkt t Westerkertiers veul Hollaandser, moar dat komt niet deur de ienvloed van t Hollaands, moar van t [[Westlaauwers Frais|Fries]]. t Westerkertiers is den ok staark verwant an t Woldfries, dat verder noar t westen toe proat wordt. 
 
-Eén Westerkertiers bestoat niet, t bestoat weer uut vier lutsje dialekten dij't onderling goed verstoanboar bennen. Hoe verder noar t noorden toe, des te meer liekt t dialekt op t [[Hoogelaandsters]] en hoe verder noar t zuden toe, des te meer liekt t dialekt op t [[Fries]] en t [[Stellingwarfs|Stellingwaarfs]].
+Eén Westerkertiers bestoat niet, t bestoat weer uut vier lutsje dialekten dij't onderling goed verstoanboar bennen. Hoe verder noar t noorden toe, des te meer liekt t dialekt op t [[Hoogelaandsters]] en hoe verder noar t zuden toe, des te meer liekt t dialekt op t Fries en t [[Stellingwarfs|Stellingwaarfs]].
 
 ==Schriefwieze==
 Over t algemeen wordt de schriefwieze van t Grunnings bruukt. Der bennen dan ook geen apaarte tekens, aksenten of kombinoatsies. Ondanks dat de Westerkertierse oa meer op de Drentse ao liekt, wordt wel oa schreven om de Grunningse regels aan te holden.
