[[Fries]] → [[Westlaauwers Frais|Fries]] ([[Westlaauwers Frais]]) (nog es)

--- a/Haskerhorne.mw
+++ b/Haskerhorne.mw
@@ -3,7 +3,7 @@
 
 De naeme zol verwiezen naor de hoeke ("horne") van Haskerlaand, waor et dörp leit. Haskerhorne beheurde in de [[middelieuwen]] tot de [[grieteni'je]] [[Haskerfiifgea]]. Tot de [[gemientelike herindieling]] op 1 jannewaori 1984 beheurde Haskerhorne tot de gemiente [[Haskerlaand]].
 
-Et dörp het een begreefplak, waor alle (oold-)inwoners begreven kunnen wodden. Ok [[Hotze Brouwer]] leit d'r begreven. Veerder het et dörp een eigen tennisverieniging en ok het Haskerhorne een eigen schoeltien, de eupenbaore basisschoele 'De Lytse Mienskip' ([[Fries]] veur De kleine gemienschop), die veur et [[basisonderwies]] zorgt in et dörp. Veur de jongeren in et dörp is d'r 't Hokje. Dit jeugdhonk zit in een oolde stal die is blieven staon naodat een braand in 1972 de boerderi'je hielendal verwoeste.
+Et dörp het een begreefplak, waor alle (oold-)inwoners begreven kunnen wodden. Ok [[Hotze Brouwer]] leit d'r begreven. Veerder het et dörp een eigen tennisverieniging en ok het Haskerhorne een eigen schoeltien, de eupenbaore basisschoele 'De Lytse Mienskip' ([[Westlaauwers Frais|Fries]] veur De kleine gemienschop), die veur et [[basisonderwies]] zorgt in et dörp. Veur de jongeren in et dörp is d'r 't Hokje. Dit jeugdhonk zit in een oolde stal die is blieven staon naodat een braand in 1972 de boerderi'je hielendal verwoeste.
 
 Sund 2007 het Haskerhorne een eigen waopen en vlagge. Et wodde ontwikkeld ter gelegenheid van et 100-jaorig bestaon van Dörpsbelang.
 
