--- a/Haskerlaand.mw
+++ b/Haskerlaand.mw
@@ -2,7 +2,7 @@
 [[Ofbeelding:Haskerland in 1983.png|thumb|Gemientegreenzen van Haskerlaand van 1934 tot 1983]]
 '''Haskerlaand''' ([[Westlaauwers Frais|Fries]]: ''Haskerlân'') is een veurmaolige [[gemiente (bestuur)|gemiente]] in et zuden van de [[Nederlaand|Nederlaanse]] perveensie [[Frieslaand]]. De gemiente beston tot [[1984]].
 
-De naeme Haskerlaand verwiest oorspronkelik naor ''haske'' of ''heesc'': een grössoorte. Een populairdere verklaoring onder de bevolking was dat et woord van et [[Fries]]e ''haske'' komt, dat ''haezien'' betekent. 
+De naeme Haskerlaand verwiest oorspronkelik naor ''haske'' of ''heesc'': een grössoorte. Een populairdere verklaoring onder de bevolking was dat et woord van et [[Westlaauwers Frais|Fries]]e ''haske'' komt, dat ''haezien'' betekent. 
 
 In [[1934]] raekte de gemiente een stok laand in et oosten van et hudige [[Ni'jehaske (plak)|Ni'jehaske]] kwiet an de doe ni'je gemiente [[Et Vene (gemiente)|Et Vene]]. Et plak [[Et Vene (plak)|Et Vene]] was naemelik groot wodden en over de greenzen van drie gemientes gruuid. Haskerlaans buurgemiente [[Schoterlaand]] gong grotendiels op in disse ni'je gemiente. Et westelike diel van die gemiente, mit de dörpen [[Delfstrehuzen]], [[Rohel (Scharsterlaand)|Rohel]], [[Rotsterhaule]] en [[Rottum (Frieslaand)|Rottum]] en [[Jehannesge]], wodde bi'j Haskerlaand daon.
 
