--- a/Warm_(Gelderland).mw
+++ b/Warm_(Gelderland).mw
@@ -6,8 +6,8 @@ Warm ligt an 't [[Waalse Water]], nen zi-jtak van den [[Olde Iessel]]. Den name 
 {{Olde Iesselstreek}}
 {{Gelderlaand}}
 
-[[Kattegerie:Achterhooks_artikel]]
-[[Kattegerie:Gemeente in Gelderlaand]]
+[[Kattegerie:Achterhooks artikel]]
+[[Kattegerie:Plaose in Gelderlaand]]
 
 [[fr:Warm]]
 [[nl:Warm (Gelderland)]]
