*Empty MediaWiki Message*

--- a/Grunnegs_(Westerkertiers).mw
+++ b/Grunnegs_(Westerkertiers).mw
@@ -5,7 +5,7 @@ Dizze ziede kin zain worden as de '''Westerkertaaierse toalwiezer''' (Westerkert
 
 
 ----
-<center>''Van noe oaf aan wordt der op dizze ziede in t Westerkertiers schreven.''</center>
+<center>''Van no oaf aan wordt der op dizze ziede ien t Westerkertiers schreven.''</center>
 
 
 t [[Westerkertiers]] wordt voak zien as n dialekt van t [[Grunnings]], moar is eiglek zo aans dat t ok as apaarte dialektgroep zien worden kin. De typisch Grunningse tweeklanken ai, ou en ui kommen niet vör ien t Westerkertiers. Vör aander Grunningers klinkt t Westerkertiers veul Hollaandser, moar dat komt niet deur de ienvloed van t Hollaands, moar van t [[Westlaauwers Frais|Fries]]. t Westerkertiers is den ok staark verwant an t Woldfries, dat verder noar t westen toe proat wordt. 
