--- a/Nedersaksische_tiedschriften.mw
+++ b/Nedersaksische_tiedschriften.mw
@@ -25,6 +25,13 @@ Ien van de kenmarken van de beweging en 't tiedschrift waren de samenwarkingsbaa
 
 Onder de skrievers die in '' 't Swieniegeltje'' publiceerden, waren [[Jan Boer]], [[Johanna van Buren]], [[Klaas Hanzen Heeroma|Klaas Heeroma]], [[Hans Heyting]], [[Derk Sibolt Hovinga]], [[Arend Lamm]], [[Anne van der Meiden]], [[Karl Sauvagerd]],  [[Wilhelmine Siefkes]], [[Gerard Vloedbeld]], [[Harm Werners]] en [[Gerriet Wilms]]. Van de redacteurs drokten bename Diemer mit zien veule bi'jdrages een stempel op 't blad. Naost alderhaand literaire inhold, weur d'r in 't blad veule prakkezeerd oaver 't uutbouwen van 't Nedersaksisch as cultuurtaal. Nao vief jaorgangen mus '' 't Swieniegeltje'' d'r deur financiële problemen mit uutskeiden.<ref>Willem Diemer (red.) (1985), ''Eendracht & Twist. Uit het archief van het letterkundig tijdschrift 't Swieniegeltje (1954-'59)''. Stabo/All-Round</ref><ref>Hendrik Entjes (2008), 'Nedersaksische letterkunde onderweg'. In Henk Bloemhoff, Jurjen van der Kooi, Hermann Niebaum en Siemon Reker (red.), ''Handboek Nedersaksische Taal- en Letterkunde''. Assen: Van Gorcum</ref><ref>[http://dissertations.ub.rug.nl/faculties/arts/2003/f.g.h.loewik/ F.G.W. Löwik (2003), ''De Twentse Beweging: strijd voor modersproake en eigenheid''. Grunning: Rieksuniversiteit Grunning. Heufdstok vief en zesse]</ref>
 
+===De Moospot/De Moespot===
+In 1958 begunden de [[Sallandse schrieverskring]] mit de uutgave van ''[[De Moespot|De Moospot]]''. Umdet sommigen de name te [[Tweants|Twèents]] vunden klinken, veraanderden dizze in 1963 in ''De Moespot''. 't Vörreljaors verschienende tiedschrift veur proza en dichteri'je in 't Nedersaksisch van Oaveriessel en Gelderlaand wördden in 1966 't orgaan van 't ni'j op-erichte [[Verbond van Nedersaksische Dialectkringen]] (Verbond veur Neersasse Dialektkringen), waordeur 't beparkte ledenantal gruuiden.
+
+In 't blad, det vandage nog verschient, viej ok verieningsni'js, ankondigings van ni'j uutekomen streektaalboeken en redactionele artikels oaver 't Nedersaksisch. Veur ''De Moespot'' bint mitandoen en briede leesberheid belangrieker as 't anholden van literaire maotstaven.<ref>Jannie Bakker-Rietman en Frank Löwik (2008), 'Streektaalliteraturen in Overijssel'. In Henk Bloemhoff, Jurjen van der Kooi, Hermann Niebaum en Siemon Reker (red.), ''Handboek Nedersaksische Taal- en Letterkunde''. Assen: Van Gorcum</ref><ref>[http://dissertations.ub.rug.nl/faculties/arts/2003/f.g.h.loewik/ F.G.W. Löwik (2003), ''De Twentse Beweging: strijd voor modersproake en eigenheid''. Grunning: Rieksuniversiteit Grunning. Heufdstok zesse en achte]</ref>
+
+''De Moespot'' gebruukt tegenswoordig de in 2000 ontwikkelde [[SONT-spelling]], die uuteprakkezeerd is veur 't hiele Nedersaksische taalgebied in Nederlaand: een passien terogge in vergelieking mit de ambities van de oldere Vosbergenschriefwieze. Midden jaoren negentig was de oplage 1300 exemplaren.
+
 ===Modersproake en Noaberschup===
 Vanof 1959 verscheen van de uutgever [[G. ten Holt]] ''[[Modersproake en Noaberschup]]'', een tiedschrift det wieder wol gaon in de trant van'' 't Swieniegeltje''. Ten Holt schreef:'' 'Et müt 'n tiedschrift wödden föör et Volk van Münsterland - Graafschup Benthem - Emsland - Gelderschen Achterhook - Twente en Salland.' ''Ok in 't gebruuk van de Vosbergenschriefwiese sleut hum ''Modersproake en Noaberschup'' an bi'j'' 't Swieniegeltje''.
 
