*Empty MediaWiki Message*

--- a/Riek_Beskers.mw
+++ b/Riek_Beskers.mw
@@ -1,5 +1,5 @@
 '''Riek Beskers''' is ne [[Achterhook]]se skriefster, geboren in 1930 in de buurtschap [[Meddo]], gemeente [[Wenters]]. Bes an aere veurtiedige pensioneringe vanwaege een auto-ongelukke in 1972, was ze warkzaam in het onderwies veur moeilijk lerende kindere an de Pr. Beatrixschole in Wenters en as sociaal pedagoge (veur verstandelijk gehandicapten) in [[Delft]]. Sunt dee tied deut ze sociaal en cultureel wark.
-Bi’jdraegen van aere hand, eschrevvene in het Wenters dialect, bunt op enommene in verscheidene bundels, zo as ‘De Oelenwanne’ (1966), ‘Den Zaodbarg’ (1967), ‘Regiotaal’ (1976), ‘Wachten op later’ (1982), ), ’Grensgevallen’ (1983),  ’’t Witte Peerd’ (1984), ’De Pöste’ (1991),  ’Mo’j ’s kieken wah’n schrievers’ (1999), ’Wenters, de taal van uns harte’ (2001) en ’Alles plat(t)’ (2002). De veurnamelijk korte verhalen gaot meespart ovver de belaevingswald van (vake verstandelijk gehandicapte) volwassenen en kindere.
+Bi’jdraegen van aere hand, eschrevvene in het Wenters dialect, bunt op enommene in verscheidene bundels, zo as ‘De Oelenwanne’ (1964), ‘Den Zaodbarg’ (1967), ‘Regiotaal’ (1976), ‘Wachten op later’ (1982), ’Grensgevallen’ (1983), ‘’t Witte Peerd’ (1984), ’De Pöste’ (1991), ’Mo’j ’s kieken wah’n schrievers’ (1999), ’Wenters, de taal van uns harte’ (2001) en ’alles plat(t)’ (2002). De veurnamelijk korte verhalen gaot meespart ovver de belaevingswald van (vake verstandelijk gehandicapte) volwassenen en kindere.
 
 {{Bron|
 *[http://www.dialectkring.nl/?pageId&#x3d;159&Riek_Beskers Dialectkring.nl]}}
