*Empty MediaWiki Message*

--- a/Nimwaege.mw
+++ b/Nimwaege.mw
@@ -1,7 +1,7 @@
 {{Gemeante |
 naam = Nimwaege |
 bestaandsnaam vlagge = Flag of Nijmegen.svg |
-bestaandsnaam woapn = Coat of arms of Nijmegen.png |
+bestaandsnaam woapn = Wapenschild Nijmegen.svg |
 lokatie = LocatieNijmegen |
 proveensie = [[Gelderlaand]] |
 heufdplaats = '''Nimwaege''' | 
