*Empty MediaWiki Message*

--- a/Drenthe.mw
+++ b/Drenthe.mw
@@ -13,7 +13,7 @@
 | inwoner_totaol = 483.173
 | inwoner_totaol_jaor = 2005
 | bevolkingsdichtheid = 183
-| commissaoris   = Heer A.L. ter Beek
+| commissaoris   = [[Jacques Tichelaar]]
 | ofbeelding     = Drenthe verkiezingen.png
 | omschrieving   = Zetelverdeeiling Provinciaole Staoten 2007
 | webstee        = http://www.drenthe.nl
