--- a/Drenthe.mw
+++ b/Drenthe.mw
@@ -31,14 +31,19 @@ In [[1046]] gaf keizer [[Hendrik III]] 't graofschap an bisschop [[Bernoldus]] v
 Hoewel Drenthe zien eigen staoten (Ridderschap en Eigenarfden) erkenden, erkenden de '''[[Republiek der Zeuven Vereanegde Nederlanden|Republiek van de Zeuven Vereeinigde Nederlaanden]]''' Drenthe niet as riek genog en zag 't as een winningsgewest, waorover de [[Staoten-Generaol]] 't bestuur mos anstellen. Pas bij de oprichting van 't Keuninkriek wör de situatie dudelijk: Drenthe wör een echte [[pervincie]].
 
 == Bestuur ==
-De [[Provinciaole Staoten]] bint veur 't lest kozen in [[2007]]. 't Bestuurlijke centrum van de pervincie is vestigd in [[Assen]]. Drenthe wordt bestuurd deur een college van PvdA en VVD. Naost de Commissaoris van de Keuningin, [[Relus ter Beek]], besteeit 't college oet"
-'''College van [[Deputeerde Staoten]]:'''
-* Deputeerde: Alie Edelenbosch - PvdA
+De [[Provinciaole Staoten]] bint veur 't lest kozen in [[2007]]. 't Bestuurlijke centrum van de pervincie is vestigd in [[Assen]]. Drenthe wordt bestuurd deur een college van PvdA en VVD. 
+
+'''College van [[Deputeerde Staoten]]:'''<br/ >
+Naost de Commissaoris van de Keuningin, [[Jacques Tichelaar]] (PvdA), besteeit 't college oet:
+* Deputeerde: Henk Baas - PvdA
+* Deputeerde: Rob Bats - VVD
 * Deputeerde: Anneke Haarsma - PvdA
-* Deputeerde: Sipke Swierstra - VVD
 * Deputeerde: Tanja Klip-Martin - VVD
-* Deputeerde: Henk Weggemans - PvdA
+* Deputeerde: Huub Looman - PvdA
+* Deputeerde: Rein Munniksma - PvdA
+
 * Pervinciesecretaoris: ''vacature''
+
 Oetslag in Drenthe van de verkiezingen veur de [[Provinciaole Staoten]] van meert 2003 en 2007:
 
 {| class="prettytable" style="float:left; margin-right:2em;"
