--- a/Drenthe.mw
+++ b/Drenthe.mw
@@ -35,12 +35,12 @@ De [[Provinciaole Staoten]] bint veur 't lest kozen in [[2007]]. 't Bestuurlijke
 
 '''College van [[Deputeerde Staoten]]:'''<br/ >
 Naost de Commissaoris van de Keuningin, [[Jacques Tichelaar]] (PvdA), besteeit 't college oet:
-* Deputeerde: Henk Baas - PvdA
-* Deputeerde: Rob Bats - VVD
+* Deputeerde: Henk Baas - ChristenUnie
 * Deputeerde: Anneke Haarsma - PvdA
 * Deputeerde: Tanja Klip-Martin - VVD
-* Deputeerde: Huub Looman - PvdA
 * Deputeerde: Rein Munniksma - PvdA
+* Deputeerde: Sipke Swierstra - VVD
+* Deputeerde: Janneke Vlietstra - VVD
 
 * Pervinciesecretaoris: ''vacature''
 
