--- a/Drenthe.mw
+++ b/Drenthe.mw
@@ -40,7 +40,7 @@ Naost de Commissaoris van de Keuningin, [[Jacques Tichelaar]] (PvdA), besteeit '
 * Deputeerde: Tanja Klip-Martin - VVD
 * Deputeerde: Rein Munniksma - PvdA
 * Deputeerde: Sipke Swierstra - VVD
-* Deputeerde: Janneke Vlietstra - VVD
+* Deputeerde: Janneke Vlietstra - PvdA
 
 * Pervinciesecretaoris: ''vacature''
 
