--- a/Drenthe.mw
+++ b/Drenthe.mw
@@ -42,7 +42,7 @@ Naost de Commissaoris van de Keuningin, [[Jacques Tichelaar]] (PvdA), besteeit '
 * Deputeerde: Sipke Swierstra - VVD
 * Deputeerde: Janneke Vlietstra - PvdA
 
-* Pervinciesecretaoris: ''vacature''
+* Pervinciesecretaoris: Annette Imhof
 
 Oetslag in Drenthe van de verkiezingen veur de [[Provinciaole Staoten]] van meert 2003 en 2007:
 
