--- a/Drenthe.mw
+++ b/Drenthe.mw
@@ -31,7 +31,7 @@ In [[1046]] gaf keizer [[Hendrik III]] 't graofschap an bisschop [[Bernoldus]] v
 Hoewel Drenthe zien eigen staoten (Ridderschap en Eigenarfden) erkenden, erkenden de '''[[Republiek der Zeuven Vereanegde Nederlanden|Republiek van de Zeuven Vereeinigde Nederlaanden]]''' Drenthe niet as riek genog en zag 't as een winningsgewest, waorover de [[Staoten-Generaol]] 't bestuur mos anstellen. Pas bij de oprichting van 't Keuninkriek wör de situatie dudelijk: Drenthe wör een echte [[pervincie]].
 
 == Bestuur ==
-De [[Provinciaole Staoten]] bint veur 't lest kozen in [[2007]]. 't Bestuurlijke centrum van de pervincie is vestigd in [[Assen]]. Drenthe wordt bestuurd deur een college van PvdA en VVD. 
+De [[Provinciaole Staoten]] bint veur 't lest kozen in [[2007]]. 't Bestuurlijke centrum van de pervincie is vestigd in [[Assen]]. Drenthe wordt bestuurd deur een college van PvdA, VVD en ChristenUnie.
 
 '''College van [[Deputeerde Staoten]]:'''<br/ >
 Naost de Commissaoris van de Keuningin, [[Jacques Tichelaar]] (PvdA), besteeit 't college oet:
