{{Portaol}} minder opvallend; n bettien "fysieke opmaak" deruut

--- a/Drenthe.mw
+++ b/Drenthe.mw
@@ -1,4 +1,3 @@
-{{Portaol|Portaol:Drenthe|Portaol Drenthe}}
 {{Pervincietabel
 | titel          = Pervincie Drenthe
 | vlag           = Flag Drenthe.svg
@@ -18,6 +17,7 @@
 | omschrieving   = Zetelverdeeiling Provinciaole Staoten 2007
 | webstee        = http://www.drenthe.nl
 }}
+{{Portaol|Portaol:Drenthe|Portaol Drenthe}}
 
 '''Drenthe''' (ok: ''Drentie'') is een [[Nederlaand]]se [[pervincie]], legen in 't noordoosten van 't laand. Grofweg grenst 't in 't noorden an de pervincie [[Grunnen (provinzie)|Grunningen]], in 't oosten an [[Duutslaand]], in 't zuden an de pervincie [[Oaveriessel|Overiessel]] en in 't westen an de pervincie [[Frieslaand|Freeislaand]]. De heufdstad is [[Assen]]. Drenthe steeit veural bekend om zien [[hunebed]]den. De dialecten die as ze in Drenthe praot, heurt bij 't [[Nedersaksisch]] en wordt mit menare [[Drèents|''Drèents'', ''Drents'', ''Dreints'' of ''Drints'']] nuumd. <ref>Tissing, Jan (red.) (1992), ''Zakwoordenboek Drents-Nederlands Nederlands-Drents'', Assen: Stichting Het Drentse Boek</ref>
 
@@ -32,9 +32,7 @@ Hoewel Drenthe zien eigen staoten (Ridderschap en Eigenarfden) erkenden, erkende
 
 == Bestuur ==
 De [[Provinciaole Staoten]] bint veur 't lest kozen in [[2007]]. 't Bestuurlijke centrum van de pervincie is vestigd in [[Assen]]. Drenthe wordt bestuurd deur een college van PvdA, VVD en ChristenUnie.
-
-'''College van [[Deputeerde Staoten]]:'''<br/ >
-Naost de Commissaoris van de Keuningin, [[Jacques Tichelaar]] (PvdA), besteeit 't college oet:
+Naost de Commissaoris van de Keuningin, [[Jacques Tichelaar]] (PvdA), besteeit 't College van [[Deputeerde Staoten]] oet:
 * Deputeerde: Henk Baas - ChristenUnie
 * Deputeerde: Anneke Haarsma - PvdA
 * Deputeerde: Tanja Klip-Martin - VVD
