--- a/Christoph_Bernhard_von_Galen.mw
+++ b/Christoph_Bernhard_von_Galen.mw
@@ -24,7 +24,7 @@ De [[Stoaten-Genneraal]] der Neerlaanden wördn der duur Meunster bie ehaald um 
 
 In 1658 verbeud n niejn keaizer van t [[Healige Roomse Riek]], [[Leopold I]], Meunster nog lange hulpe bie boetnlaandse boondgenootn te vroagn. De hoge hearn van Meunster mochn doarduur nit metdoon an de [[Laanddag]] umdet ze gin keaizerlik leager too woln loatn. In augustus 1660 leut Von Galn n dämke bouwn in n rivierken, woerduur't de mölns in de stad nit mear te gebroekn warn. Doarup gungn 2.000 boern an de [[skuppe]] um n niej kanaal te greawn, um t water umme te leaidn. Oonderwiel heuld al half [[Europa]] t hele gedoo in de gaatn.
 
-De Stoaten-Genneraal vreug n [[stad]] vanniessen um t leager der in te loatn, mer wier gavn de Meunstersen nit too. Plots sleug t oonderhaandeln umme; duur nen decemberstoarm breuk t dämke, woerduur't de stad blaank köm te stoan. Noa vief moand beleagering zag de stad non in det ze t nit länger teegn konn hooln, en gavn zik oawer. De börgermeaisters wördn vervöngn en Van Galen wör preensbisskop. t Leager van de keaizer treukn noar [[Hongaarnlaand|Hongarieje]] um t met de [[Turkieje|Törkn]] an te spann.
+De Stoaten-Genneraal vreug n [[stad (woonstee)|stad]] vanniessen um t leager der in te loatn, mer wier gavn de Meunstersen nit too. Plots sleug t oonderhaandeln umme; duur nen decemberstoarm breuk t dämke, woerduur't de stad blaank köm te stoan. Noa vief moand beleagering zag de stad non in det ze t nit länger teegn konn hooln, en gavn zik oawer. De börgermeaisters wördn vervöngn en Van Galen wör preensbisskop. t Leager van de keaizer treukn noar [[Hongaarnlaand|Hongarieje]] um t met de [[Turkieje|Törkn]] an te spann.
 
 [[Ofbeelding:Muenster Zwinger 7040.jpg|thumb|300px|[[Citadel|Dwangborch]] in Meunster, ebouwd vuur Von Galen.]] 
 
