[[Europa]] → [[Europa (continent)|Europa]] (dat is [[Europa (continent)]])

--- a/Grolle.mw
+++ b/Grolle.mw
@@ -86,7 +86,7 @@ Bierbrouwer [[Grolsch]] was lange tied ut belangriekste bedrief in Grolle dat zo
 
 Een ander beurs-enoteerd bedrijf in Grolle is [[Nedap]], onder meer bekend van de [[stemmachine]]s die ebroekt wodt bi-j verkiezingen.
 
-Van 1947 tot 2001 is un kartonnagefabriek in Groenlo evestigd ewest onder verschillende namen: Apeldoornsche Cartonnagefabriek N.V, Monocon, Sweetheart en Polarcup. De fabriek was [[Europa]]'s grootste plastic bekerproducent. Moderbedrief [[Huhtamaki van Leer]] slot en verplaatsten de fabriek in 2001, waarbi-j meer als 200 banen in Grolle verdwenen.
+Van 1947 tot 2001 is un kartonnagefabriek in Groenlo evestigd ewest onder verschillende namen: Apeldoornsche Cartonnagefabriek N.V, Monocon, Sweetheart en Polarcup. De fabriek was [[Europa (continent)|Europa]]'s grootste plastic bekerproducent. Moderbedrief [[Huhtamaki van Leer]] slot en verplaatsten de fabriek in 2001, waarbi-j meer als 200 banen in Grolle verdwenen.
 
 ==Bekende Grolsen==
 [[Tristan Hoffman]] (wielrenner)
