/* Galleri-je */ -/- [[Ofbeelding:Ut Grols Kanon op de Kanonswal in Groenlo.jpg]] (he-w neet); [[File:Groenlo kanon.JPG]]?

--- a/Grolle.mw
+++ b/Grolle.mw
@@ -100,12 +100,12 @@ Van 1947 tot 2001 is un kartonnagefabriek in Groenlo evestigd ewest onder versch
 Ofbeelding:Grolle gracht.jpg|De stadsgrachte van Grolle
 Ofbeelding:Grolle_markte.jpg|Den Markte in Grolle
 Ofbeelding:Groenlo_schoppe.jpg|Schoppe van ut stadsmuseum in Grolle
-Ofbeelding:Ut Grols Kanon op de Kanonswal in Groenlo.jpg|'t Grols Kanon op de Kanonsbulte
 Ofbeelding:Oude Calixtuskerk te Groenlo.jpg|Den [[Olde Calixtuskarke|Olden Calixtus Karke]] in Grolle
 Ofbeelding:Nieuwe Calixtuskerk in Groenlo.jpg|Den [[Ni'je Calixtuskarke|ni-jen Calixtus Karke]], ok in Grolle
 Ofbeelding:Grolle_geavel.jpg|
 Ofbeelding:Grolle_markte1.jpg|
 </gallery>
+{{commonscat|Groenlo}}
 
 {{bron|*Het Rechterlijke Archief van de stad Grolle, [[Gelderland]] boek nummer 153.}}
 
