--- a/Harm_Agteresch.mw
+++ b/Harm_Agteresch.mw
@@ -4,7 +4,7 @@
 ==Persoonlik==
 Agteresch greuidn op in t [[Tweante|Tweantse]] Riesn en volgen n opleaidege as stukadoor. Hee was etrouwd met Dinie, den at in 2004 oet de tied is ekömn. Ze kreegn twee dochters en twee zöns. Ene van de dochters zit op t kafeetjen van t Parkgebouw in Riesn.
 
-Harm köm in zinne jeugnd völle bie [[Koarel van n Notoaris]] oawer de vloere. Den gavn um muzieklesn en nöm um met op reaize duur heel [[Europa]], in zinne ''keukelkoare''.
+Harm köm in zinne jeugnd völle bie [[Koarel van n Notoaris]] oawer de vloere. Den gavn um muzieklesn en nöm um met op reaize duur heel [[Europa (continent)|Europa]], in zinne ''keukelkoare''.
 
 Juli 2010 wör duur de dokters longkaanker bie Harm eveundn. Ze meant at hee hoogoet zoonder chemokuurn nog dreekwart joarn te leawn hef. Zin nieje vrindin Gree dut um begeleaidn. Zelf zegt hee: "Ik hebbe n mooi leawn ehad."<ref>[http://www.rtvoost.nl/nieuws/?nid=113912 RTV Oost - Harm oet Riessen heeft longkanker. 4 Augustus 2010]</ref>
 
