--- a/Haïti.mw
+++ b/Haïti.mw
@@ -6,7 +6,7 @@
 De meeste leu dee't der wont zeent [[Rooms-katholieke Karke|Roomsk]] (80%). n Kleain gedeelte is [[Protestaant]] (16%). t Offisjele betaalmiddel is de [[Gourde]].
 
 == Geskiedenisse ==
-Haïti wör in [[1492]] duur [[Christophel Columbus]] oontdekt. Toertieds wör t bewoond duur de [[taíno (volk)|taíno]]-indianen. Dit volk störf oet duur [[slawerieje|slawenarbeid]] en duur de vrömde zeektes dee't de [[Europa|Europeanen]] metnömmen. De hele bevolking van non stamt of van de slawen dee't der toertieds met doezenden tegelieke hen wörren evoord.
+Haïti wör in [[1492]] duur [[Christophel Columbus]] oontdekt. Toertieds wör t bewoond duur de [[taíno (volk)|taíno]]-indianen. Dit volk störf oet duur [[slawerieje|slawenarbeid]] en duur de vrömde zeektes dee't de [[Europa (continent)|Europeanen]] metnömmen. De hele bevolking van non stamt of van de slawen dee't der toertieds met doezenden tegelieke hen wörren evoord.
 
 In [[1697]] dee [[Spanje]] t bevel oawer t westelike deel van [[Hispaniola]] in haande van [[Fraankriek]], dee't gebeed umme deupten töt [[Saint-Domingue]]. t Wör ene van Fraankrieks meest weenstgewende kolonies; roond [[1780]] kom zon betten 40 perseant van alle [[suker]] en 60 perseant van alle koffie wat in Europa ebroekt wör oet Saint-Domingue. Der wör mear suker en koffie verbouwd en verwoarket dan in alle Britse [[West-Indië|West-indiese]] kolonies bie mekoar. Saint-Dominge was in dee tied t riekste bezit van Europa, en wör doarumme wal ''n Poarel van de Antillen'' eneumd.
 
@@ -58,7 +58,6 @@ Haïti is n vuurbeeld van nen [[mislukten stoat]], woerin't de regearing feaitel
 
 == Geleuf ==
 Slawen nömmen vanoet Afrika [[animisme (religie)|animistiese]] geleuwe met. In Haïti mossen ze van priesters en plantagebazen t [[Rooms-Katholieke Karke|Roomske]] geleuf an nemmen. Oet ne mengeling van t kattolicisme en Afrikaanse geleuwe onsteun [[vodou]], ne variaant van t in [[West-Afrika]] ontstoane [[voodoo]]. In t vodou zeent ook invloden terugge te veenden van de Taíno-indinanen. De Roomske koarke probeerden t vodou der wal oet te kriegen, mer det lukken öar neet. t Grötste gedeelte van Haïti is wal Roomsk offisjeel, mer doarnöast doot der ook nog nen hoop an vodou. De leste tied is t [[protestaant]]isme in opkomst.
-
 
 == Natuur ==
 t Laand hef n antal kale vlaktes, mear vuural nen hoop heuwels en boarge. Eerst was t laand bedekt met bos, mear det wör ekapt um te können boeren, of um van te stokken en te kokken. Rechtevoort is der nog mear twee perseant van t bos oawer. Duur de völle heuwels en boarge zorgen disse boskap vuur drekstreume en groondverzakkings. Dit is slecht vuur de laandbouw en zorget det orkanen en cyklonen vrie spel hebt. Völle deers zeent öar leafgebeed kwiet ewörden en doarduur oet estörven.
