[[Europa|]] → [[Europa (continent)|]]

--- a/Jeroen_Dubbeldam.mw
+++ b/Jeroen_Dubbeldam.mw
@@ -1,7 +1,7 @@
 [[Ofbeelding:Jeroen Dubbeldam.JPG|thumb|Jeroen Dubbeldam]]
 '''Jeroen Dubbeldam''' ([[Zwolle (Oaveriessel)|Zwolle]], [[15 april]] [[1973]]) is nen [[Neerlaand]]sen [[springruuter]].
 
-Zin eerste pries wun he in [[1994]], doo't he met t [[peard]] ''Killarney'' [[Europa|Europees]] Kampioen wör bie de ''young riders'' (jonge ruuters). De meeste weenst haalden he met t peard ''De Sjiem''. In [[2000]] wun he de gooldene medalje op de [[Olympiese Zommerspöllen]] van [[Sydney]] en n joar doarop de earvolle Grote Pries van Aken.
+Zin eerste pries wun he in [[1994]], doo't he met t [[peard]] ''Killarney'' [[Europa (continent)|Europees]] Kampioen wör bie de ''young riders'' (jonge ruuters). De meeste weenst haalden he met t peard ''De Sjiem''. In [[2000]] wun he de gooldene medalje op de [[Olympiese Zommerspöllen]] van [[Sydney]] en n joar doarop de earvolle Grote Pries van Aken.
 
 In augustus [[2006]] wör Dubbeldam op ''Up and Down'' wearldkampioen met t nasjonale manskap, bie de viefde wearldruuterspöllen in Aken, met [[Albert Zoer]], [[Gerco Schröder]] en [[Piet Raijmakers]].
 
