[[Europa]] → [[Europa (continent)|Europa]] (dat is [[Europa (continent)]])

--- a/Bobby_McFerrin.mw
+++ b/Bobby_McFerrin.mw
@@ -24,7 +24,7 @@ In 1989 skreef en zung he de muziek vuur n kortn film ''Knick Knack'' van de ani
 
 In [[1993]] zung he t bekeande Roze Panternommer vuur n film ''Son of the Pink Panther''.
 
-Nöast zinne zaankloopbaan wör McFerrin an esteeld in 1994 as heuwd van t [[St. Paul Kamerorkest]]. Hee dut regelmoatig roondreaizen as gastdirigeant vuur verskeaidene symfonie-orkesten in de Verenigde Stoaten en [[Kanneda|Kanada]] en [[Europa]]. As he metdut an zon konsert, dut he nöast dirigearn ook zingen, woerin't he ook völle de tooheurders in betrekt.
+Nöast zinne zaankloopbaan wör McFerrin an esteeld in 1994 as heuwd van t [[St. Paul Kamerorkest]]. Hee dut regelmoatig roondreaizen as gastdirigeant vuur verskeaidene symfonie-orkesten in de Verenigde Stoaten en [[Kanneda|Kanada]] en [[Europa (continent)|Europa]]. As he metdut an zon konsert, dut he nöast dirigearn ook zingen, woerin't he ook völle de tooheurders in betrekt.
 
 McFerrin helpt ook met in verskillende muzieklesprogramma's, en dut mangs vriejwillig gastmuziekles geewn in publieke skooln duur de VS. Hee hef ook ne zönne, Taylor, woermet he al verskeaidene optreedns edoan hef. Taylor is non zelf gangs um ne eegne zaankloopbaan te startn.
 
