--- a/Morgan_Heritage.mw
+++ b/Morgan_Heritage.mw
@@ -1,7 +1,7 @@
 {{Dia|Dit artikel is eskrewen in t '''[[Eanters]]''', in ne wat ongebroekelike, klaankgetrouwere skriefwieze}}
 '''Morgan Heritage''' (umme-zat: ''Morgan's aarfgood'') is ne [[reggae]]band, den't besteet oet vief keender van reggae-artiest [[Denroy Morgan]]. Earen eersten plaat ''Miracles'' köm oet in [[1994]]. t Album steund earzelf neet zoë an. Ear eerste optreën was op [[Reggae Sunsplash]] in [[Jamaika]]. 
 
-Noa t oetkommen van "Miracles" verhuuzen de femilie noar Denroy's thoesloand, Jamaika. In disse tied skeaden der drei femilieleën met oet. Eënmoal op Jamaika deë Morgan Heritage samenwaarken met bekeande reggaemakers [[Robert Dixon (muzikaant)|Bobby Dixon]] en [[Lloyd James]], woer at n plaat ''Protect Us Jah'' (1997) oetköm, den at völ leuwend kommentaar kreëg, evolget duur ''One Calling'' (1998), en in 1999 n mear geleuwigen plaat ''Don't Haffi Dread''. Ze hebt ook verskeadene verzaamelplaaten oet-egiëwen en nen optreënsopnaame "Live in Europe!", op-enömmen op earen toer in 2000. In 2001 köm ear plaat ''More Teachings'' oet, woernoa't ze nogmoals noar [[Europa]] kömmen. Seend dautieds komt ze riëgelmoatig oawer.
+Noa t oetkommen van "Miracles" verhuuzen de femilie noar Denroy's thoesloand, Jamaika. In disse tied skeaden der drei femilieleën met oet. Eënmoal op Jamaika deë Morgan Heritage samenwaarken met bekeande reggaemakers [[Robert Dixon (muzikaant)|Bobby Dixon]] en [[Lloyd James]], woer at n plaat ''Protect Us Jah'' (1997) oetköm, den at völ leuwend kommentaar kreëg, evolget duur ''One Calling'' (1998), en in 1999 n mear geleuwigen plaat ''Don't Haffi Dread''. Ze hebt ook verskeadene verzaamelplaaten oet-egiëwen en nen optreënsopnaame "Live in Europe!", op-enömmen op earen toer in 2000. In 2001 köm ear plaat ''More Teachings'' oet, woernoa't ze nogmoals noar [[Europa (continent)|Europa]] kömmen. Seend dautieds komt ze riëgelmoatig oawer.
 
 Earen zesden studioplaat, ''Three in One'', wör in 2003 oet-egiëwen. Ze hebt oëk twei goodverkoëpende [[DVD]]s oet-ebracht: ''Live in London'' en ''Live over Europe 2003'', en earen zuuwnden plaat ''Full Circle'' köm oet in 2005. Ear leste oetgawe is n plaat ''Mission in Progress'', en köm oet in april 2008. Doarop stoat oonder mear de nommers "faithful" en "Raid Rootz Dance".
 
