[[Europa|]] → [[Europa (continent)|]]

--- a/Dominikaanse_Reppubliek.mw
+++ b/Dominikaanse_Reppubliek.mw
@@ -18,7 +18,7 @@ Iej mut de Dominikaanse Reppubliek neet duur mekaar haaln met t eilaand [[Domini
 
 De Dominikaanse Reppubliek ([[Spaans]]: ''República Dominica'', oetsprökn as [reˈpuβlika ðominiˈkana]) Is nen stoat op t [[eilaand|eiloand]] [[Hispaniolia]], deel van de eiloandngroep de [[Grote Antillen]] in t [[Karibies gebeed]]. n Daarde deel van t eiloand heurt an n stoat [[Haïti]], woerduur at Hispanjolia ene van de twee Karibiese eiloandn is woer at twei stoatn op lignt. Op [[Kuba]] noa is de Dominikaanse Reppubliek n grötsten Karibiesen stoat met 48.442 kilometers in t veerkoant an loand en ongevear 10 miljoen leu.
 
-t Loand wörd seend t zuuwnde joarhoonderd al bewoond duur de taíno-indiaann. In [[1492]] köm dr [[Kristoffer Kolumbus]] an. Den stichen dr de eerste bliewnde [[Europa|Europese]] neerzettige in de Nieje Wearld, dee at he [[Santo Domingo]] neumdn. Det is noe de heuwdstad van de Reppubliek en t was vrauer [[Spanje]]'s eerste heuwdstad in de Nieje Wearld. In Santo Domingo stoat, net as zovölle eerste dinge in de Nieje Wearld, de eerste universiteat, kathedroale en kasteel. Dee leste beale stoat in t Ciudad Colonialgebeed, wat op de wearldaarfgoodlieste van [[UNESCO]] steet.
+t Loand wörd seend t zuuwnde joarhoonderd al bewoond duur de taíno-indiaann. In [[1492]] köm dr [[Kristoffer Kolumbus]] an. Den stichen dr de eerste bliewnde [[Europa (continent)|Europese]] neerzettige in de Nieje Wearld, dee at he [[Santo Domingo]] neumdn. Det is noe de heuwdstad van de Reppubliek en t was vrauer [[Spanje]]'s eerste heuwdstad in de Nieje Wearld. In Santo Domingo stoat, net as zovölle eerste dinge in de Nieje Wearld, de eerste universiteat, kathedroale en kasteel. Dee leste beale stoat in t Ciudad Colonialgebeed, wat op de wearldaarfgoodlieste van [[UNESCO]] steet.
 
 Drei joarhoonderte loank heurdn t Spanje tau, en in körte tuskentiedn ook an [[Fraankriek|Froankriek]] en [[Haïti]]. In 1821 köm t op zikzelf, mer wör rap innömn duur Haïti. In [[1844]] wun t loand de [[Dominikaanse Onofhaankelikheaidsoorlog|Dominikaanse Onofhoankelikheadsoorlog]], mear dau köm t vuur 72 joar wier oonder Spaans beweend, woernoa t neet heel best met de Reppubliek gung.
 
