[[Sunte-Marten]] → [[Sunte-Marten (feest)|Sunte-Marten]] (dat is [[Sunte-Marten (feest)]])

--- a/Foekepot.mw
+++ b/Foekepot.mw
@@ -14,7 +14,7 @@ Over de foekepot bestaon oek verschillende liedjes, in de [[Achterhoek]] zingen 
 : Foekepotterij, foekepotterij,
 : geef mien 'n cent, dan gao ik weer veurbij.
 
-Mit [[Sunte-Marten]] (in november) of [[vastenavend]] wönnen de foekepot oek deur kienders gebruuk as ze langes de deuren gungen. 
+Mit [[Sunte-Marten (feest)|Sunte-Marten]] (in november) of [[vastenavend]] wönnen de foekepot oek deur kienders gebruuk as ze langes de deuren gungen. 
 
 Een internasjonaol bekende versie van de foekepot is de [[cuíca]], die veul in [[samba]] gebruukt wonnen.
 
