--- a/T_Stift.mw
+++ b/T_Stift.mw
@@ -8,7 +8,7 @@ In t Stift steet de Stiftskeark oet [[1400]] en de Stiftshuze dee't rechtevoort 
 ==Geskiedenisse==
 In [[1142]] wör de keark van Weersel met alle bezittings an de [[ridder (ruuter)|ridder]] [[Hugo van Buren]] doan. Töt dee tied was dizze keark ne kapel dee vanoet de [[Sunt-Plechelmusbasiliek]] in [[Olnzel]] beheard wör. Hugo van Buren treuk dr zik in terugge met zinne metgezeln, um ofzoonderd te leavn veur boote en gebed. n [[14 september|14den september]] [[1152]] wör de kapel inwiedt as klooster. t Was eerst n [[benediktienen|benediktiener]]klooster veur beade [[poater]]s en [[zuster]]s. De eerste joarhoonderden doarnoa wör t spul vake löagreufd deur Tweantse hearn, veural deur de Hearn van [[Soasel]]. Noa ne tied trökn de poaters weg, en bleavn de zusters alleen. Doarnoa wördn vrouwleu en meaks van staand in t klooster loatn veur ne degelike opvoding en onderwies. Heanig an kömn de reagels van de Benediktieners op n achtergroond, en noa 1500 wör t klooster helemoal n vrie oadelik [[sticht]], woar nog wal elken dag ne [[mis]]dienst höaldn wör.
 
-[[Sunte-Marten|Sunt-Matn]] [[1523]] braandn t wongedeelte van t klooster töt de groond too of. In [[1626]], doo at Oldzel deur de Spanjooln was innömn, beslötn de Stoatn van Oaveriessel det t Stift [[protestantisme|protestaants]] mos wordn, en ze deudn dr nen [[gerefformeerd]]n [[domie]] hen. De Stiftkeark wör kaal maakt noar [[Kalvinisme|Kalvinisties]] gebroek, en opniej inricht. [[Lodewijk Napoleon Bonaparte|Keuning Lodewiek Napoleon Bonaparte van Hollaand]] veund in [[1809]] dat de keark te klein was veur de grote [[Rooms-Katholieke Karke|Roomske]] gemeenskop van Weersel, en dat doarum t Stift better veur de kleine hervörmde gemeenskop was. De Roomsken kreegn geald um zelf ne keark te bouwn dat better op t antal roomske kearkgangers bereknd was. In [[1932]] wör t Stift duchtig anpakt en opknapt. In [[1974]] wördn de Stiftshuze, dee um [[1800]] ofbrökn warn, wier optrökn op öar oale funderings noar de oale teeknings oet [[1750]].
+[[Sunte-Marten (feest)|Sunt-Matn]] [[1523]] braandn t wongedeelte van t klooster töt de groond too of. In [[1626]], doo at Oldzel deur de Spanjooln was innömn, beslötn de Stoatn van Oaveriessel det t Stift [[protestantisme|protestaants]] mos wordn, en ze deudn dr nen [[gerefformeerd]]n [[domie]] hen. De Stiftkeark wör kaal maakt noar [[Kalvinisme|Kalvinisties]] gebroek, en opniej inricht. [[Lodewijk Napoleon Bonaparte|Keuning Lodewiek Napoleon Bonaparte van Hollaand]] veund in [[1809]] dat de keark te klein was veur de grote [[Rooms-Katholieke Karke|Roomske]] gemeenskop van Weersel, en dat doarum t Stift better veur de kleine hervörmde gemeenskop was. De Roomsken kreegn geald um zelf ne keark te bouwn dat better op t antal roomske kearkgangers bereknd was. In [[1932]] wör t Stift duchtig anpakt en opknapt. In [[1974]] wördn de Stiftshuze, dee um [[1800]] ofbrökn warn, wier optrökn op öar oale funderings noar de oale teeknings oet [[1750]].
 
 ==Externe links==
 *[http://www.hetstift.nl Webstea van t Stift]
