+[[Kattegerie:Taol]]; interwiki: 100+

--- a/Fins.mw
+++ b/Fins.mw
@@ -7,3 +7,114 @@ t Fins is ne sproak van de [[Oostseafinse spröake]] in de [[Finoegrisch|Finoegr
 == Alfabet en [[klaankinventoarisoasie]] ==
 
 t Fins ebroekt t [[Latiense alfabet]], woarnoa de ''Z, z'' noch drea oandre lettrs anevoegd zeent: ''Å, å'', ''Ä, ä'' en ''Ö, ö'', vergliekboar met [[Neersassies|Neersassische]] ''oa'', ''ea'' en ''ö''. Disse lettrs könt aajt ok noch lange oetesprök wor, behalwe de ''å''. Den kriej de ''ea'' as in ''wean'' en de ''eu'' as in [[Nederlaands]] ''deur''.
+
+[[Kattegerie:Taol]]
+
+[[af:Fins]]
+[[als:Finnische Sprache]]
+[[an:Idioma finés]]
+[[ang:Finnisc sprǣc]]
+[[ar:لغة فنلندية]]
+[[az:Fin dili]]
+[[ba:Фин теле]]
+[[be:Фінская мова]]
+[[be-x-old:Фінская мова]]
+[[bg:Фински език]]
+[[bn:ফিনীয় ভাষা]]
+[[br:Finneg]]
+[[bs:Finski jezik]]
+[[ca:Finès]]
+[[ce:Финляндхойн мотт]]
+[[ceb:Pinulongang Pines]]
+[[crh:Fin tili]]
+[[cs:Finština]]
+[[cv:Финн чĕлхи]]
+[[cy:Ffinneg]]
+[[da:Finsk (sprog)]]
+[[de:Finnische Sprache]]
+[[dv:ސުއޯމީ]]
+[[ee:Finngbe]]
+[[el:Φινλανδική γλώσσα]]
+[[en:Finnish language]]
+[[eo:Finna lingvo]]
+[[es:Idioma finés]]
+[[et:Soome keel]]
+[[eu:Finlandiera]]
+[[fa:زبان فنلاندی]]
+[[fi:Suomen kieli]]
+[[fiu-vro:Soomõ kiil]]
+[[fr:Finnois]]
+[[fy:Finsk]]
+[[ga:An Fhionlainnis]]
+[[gd:Fionnais]]
+[[gl:Lingua finesa]]
+[[gv:Finnlynnish]]
+[[haw:‘Ōlelo Pinilana]]
+[[he:פינית]]
+[[hi:फ़िनिश भाषा]]
+[[hr:Finski jezik]]
+[[hsb:Finšćina]]
+[[hu:Finn nyelv]]
+[[hy:Ֆիններեն]]
+[[ia:Lingua finnese]]
+[[id:Bahasa Suomi]]
+[[io:Finlandana linguo]]
+[[is:Finnska]]
+[[it:Lingua finlandese]]
+[[ja:フィンランド語]]
+[[jv:Basa Suomi]]
+[[ka:ფინური ენა]]
+[[ko:핀란드어]]
+[[koi:Фин кыв]]
+[[krc:Фин тил]]
+[[kv:Финн кыв]]
+[[kw:Finnek]]
+[[la:Lingua Finnica]]
+[[li:Fins]]
+[[lmo:Lengua finlandesa]]
+[[lt:Suomių kalba]]
+[[lv:Somu valoda]]
+[[mdf:Суоминь кяль]]
+[[mhr:Финн йылме]]
+[[mk:Фински јазик]]
+[[mr:फिनिश भाषा]]
+[[ms:Bahasa Finland]]
+[[myv:Суоминь кель]]
+[[nah:Fintlahtōlli]]
+[[nds:Finnsche Spraak]]
+[[nl:Fins]]
+[[nn:Finsk språk]]
+[[no:Finsk]]
+[[oc:Finés]]
+[[os:Финнаг æвзаг]]
+[[pl:Język fiński]]
+[[pms:Lenga finlandèisa]]
+[[pnb:فنی]]
+[[pt:Língua finlandesa]]
+[[qu:Phinis simi]]
+[[rm:Lingua finlandaisa]]
+[[ro:Limba finlandeză]]
+[[ru:Финский язык]]
+[[scn:Lingua fillannisa]]
+[[sco:Finnish leid]]
+[[se:Suomagiella]]
+[[sh:Finski jezik]]
+[[simple:Finnish language]]
+[[sk:Fínčina]]
+[[sl:Finščina]]
+[[sq:Gjuha finlandeze]]
+[[sr:Фински језик]]
+[[stq:Finsk]]
+[[sv:Finska]]
+[[ta:பின்னிய மொழி]]
+[[tg:Забони финӣ]]
+[[th:ภาษาฟินแลนด์]]
+[[tr:Fince]]
+[[tt:Фин теле]]
+[[ug:فىنلاندىيە تىلى]]
+[[uk:Фінська мова]]
+[[vec:Łéngua finlandexe]]
+[[vi:Tiếng Phần Lan]]
+[[yo:Èdè Fínlándì]]
+[[zh:芬兰语]]
+[[zh-min-nan:Suomi-gí]]
