*Empty MediaWiki Message*

--- a/Vrijmezzelderij.mw
+++ b/Vrijmezzelderij.mw
@@ -1,26 +1,25 @@
 [[Ofbeelding:Square compasses.svg|right|thumb|250px|Logo van de vrijmezzelderij]]
-De '''Vrijmezzelderij''' is n wereldomspannende demokroatische bewegen, woarbie de leden streven om n beter mìns te worden en willen biedroagen aan n betere soamleven. Leden kommen bieainkander ien lozies veur rituwele bieainkomsten en om lezingen bie te wonen. Aan t heufd van zonnen lozie staait n achtboare meester. Aal lozies ien n gebied kommen geregeld bieainkander onder n "[[Groot Oosten]]" of "[[Groot Lozie]]", dij veurzitten wordt deur n [[Grootmeester]]. t Woord "Groot Oosten" of "Grand Orient", slog op t Uropese kontinìnt, woarbie de lozies op de Britse aailanden t oetgangspunt, t westen vörmen.
+De '''Vrijmezzelderij''' is n wereldomspannende demokroatische bewegen, woarbie de leden streven om n beter mìns te worden en willen biedroagen aan n betere soamleven. Leden kommen bieainkander ien lozies veur rituwele bieainkomsten en om lezingen bie te wonen. Aan t heufd van zonnen lozie staait n achtboare meester. Aal lozies ien n gebied kommen geregeld bieainkander onder n "[[Groot Oosten]]" of "[[Groot Lozie]]", dij veurzitten wordt deur n [[Grootmeester]]. t Woord "Oosten" in "Groot Oosten" verwiest noar de plek woar de verlichting vandoan komt, de zunne komt immers op in t oosten. 
 
 == Rangorder ==
-Binnen de vrijmezzelderij heerst n staarke rangorder. Dizzent wordt kenmaarkt deur de groaden van vrijmezzelderij. Ien totoal binnen der 33 groaden, môr der binnen lutje dij ook waarkelk de 33. groad berieken. En hou hoger joen groad, hou meer kennes van zoaken man krigt. Ien veul lutjedere lozies kin man den ook nait hoger worden as 3. of 4. groad.
+Binnen de vrijmezzelderij heerst ondanks de staarke rangorder bruierschap. De rangorder wordt kenmaarkt deur de groaden van vrijmezzelderij: Leerling, Gezel en Meester. Wel Meester-vrijmezzelder is, het tougang tot vervolpoaden, zoals de Schotse Ritus. Dij telt 33 groaden, môr der binnen lutje dij ook waarkelk de 33. groad berieken. En hou hoger joen groad, hou meer kennes van zoaken man krigt, want elke groad kint weer aander themetiek, zo as alchemie, christendom, kabbala, rozenkruusers, ridderschop en themetiek oet t olle testement.
 
 [[Ofbeelding:Freemasons.hall.london.arp.750pix.jpg|250px|right|thumb|Freemasons hall ien Londen]]
 [[Ofbeelding:Masonic Register 1876.jpg|250px|right|thumb|n Vrijmezzeldersdokumìnt mit veul symboliek]]
 == Oorsprong ==
-Man leuft dat de vrijmezzelders heur failiekse rödden hebben as stainmezzelders dij grote kìrken en domkìrken baauwden en oorspronkelk zulfs de [[tìmpel van Solomon]]. Zai zollen gehaime kennes oet olle tieden hebben, volgens summege luu zulfs oet Atlantis, en binnen woarschienlek ôfstammers van de [[tìmpelders|tìmpelder ridders]], dij oorspronkelk oet [[Kampaanje]] (Champagne) en [[Languedoc]] (Frankriek) kwammen. Zai binnen, noa de jacht op heur deur de Franse keunen, noar [[Skotlaand]] vlucht en binnen doar bie de bestoande gildes kommen. Ien 1420 wordt doar de eerste Skotse lozie opricht. De aaldereerste vrijmezzelderslozie wör sticht ien 926 ien [[York]], [[Engelaand]], ien 1717 begon de nijmoodse vrijmezzelderij pas ien [[Westminster]], bie (tegenswoordeg ien) [[Londen]]. Doar staait den ook de [[Freemasons hall]], de belaangriekste trefstee en tìmpel(s) van de vrijmezzelderij ien t Veraind Keunenkriek. Ien 1771 wör de "Grand Orient de France" oprichten, woarbie ien dezulfde tied ook aander lozies onder t Groot Oosten ontstonden, woaronder de oldste van Nedelaand, [[L'Union Provinciale]] ien [[Grunnen (stad)|Stad]].
+Man leuft dat de vrijmezzelders heur failiekse rödden hebben as stainmezzelders dij grote kìrken en domkìrken baauwden en oorspronkelk zulfs de [[tìmpel van Solomon]]. Zai zollen gehaime kennes oet olle tieden hebben, volgens summege luu zulfs oet Atlantis. Aander mainen dat ze ôfstammers binnen van de [[tìmpelders|tìmpelder ridders]], dij oorspronkelk oet [[Kampaanje]] (Champagne) en [[Languedoc]] (Frankriek) kwammen. Volgens dij verhoalen binnenze, noa de jacht op heur deur de Franse keunen, noar [[Skotlaand]] vlucht en binnen doar bie de bestoande gildes kommen. Ien 1420 wordt doar de eerste Skotse lozie opricht. Waitenschappers, zoas perfessor in de Vrijmezzelderij Ton van de Sande, leuven dat nait en stellen t beginpunt van de Vrijmezzelderij op 1717, toun der ien [[Westminster]], bie (tegenswoordeg ien) [[Londen]] n Grootlozie oprichten wurd. Doar staait den ook de [[Freemasons hall]], de belaangriekste trefstee en tìmpel(s) van de vrijmezzelderij ien t Veraind Keunenkriek. Dit gebaauw is n monument veur de ien de [[Eerste Wereldoorlog]] omkommen Vrijmezzelders. Ien 1771 wör de "Grand Orient de France" oprichten, woarbie ien dezulfde tied ook aander lozies onder t Groot Oosten ontstonden, woaronder ain van de oldsten van Nedelaand [[L'Union Provinciale]] ien [[Grunnen (stad)|Stad]] is.
 
 == Symboliek ==
+Vrijmezzelderij kent n apaarte baauw- en lichtsymboliek dij de "lutje man" over t aalgemain nait opmaarkt of de betaikenis van wait. Veul [[Olle Egypte|Egyptische]] symboliek komt ook veur bie de vrijmezzelderij, woarvan de pyramide en t oog de bekendste binnen. Dizzent staait onder aander ook op t [[zegel van de Verainde Stoaten]]. Ook de obelisk nemt n grote ploats in in de symboliek van de vrijmezzelders. Ook de twij piloaren van de tìmpel van Solomon, Boaz en Joachim, worden broekt deur de vrijmezzelders, onder aander bie de ienwaaidensrituwelen. Voak zugt man ook n vlammende steern en schoaktiggelvlouers, dij de verainen van licht en duusternis symboliseren zollen. 
 
-Vrijmezzelderij kent n apaarte symboliek dij de "lutje man" over t aalgemain nait opmaarkt of de betaikenis van wait. Veul [[Olle Egypte|Egyptische]] symboliek komt ook veur bie de vrijmezzelderij, woarvan de pyramide en t oog de bekendste binnen. Dizzent staait onder aander ook op t [[zegel van de Verainde Stoaten]]. Ook de obelisk nemt n grote ploats in in de symboliek van de vrijmezzelders. Ook de twij piloaren van de tìmpel van Solomon, Boaz en Joachim, worden broekt deur de vrijmezzelders, onder aander bie de ienwaaidensrituwelen. Voak zugt man ook n steern, dij de steern [[Sirius]] veurstelt en schoaktiggelvlouers, dij de verainen van licht en duusternis symboliseren zollen. 
-
-t Aigense symbool bestaait oet n passer dij n houklat kruust, mit voakentieds ien t midden de letter G. Woar dit veur staait waiten boetenders nait. Der binnen theorien dat dit staait veur "gate" (poort). Dit symbool wordt ook wel ien verbaand brocht mit t hexagram, zo as de steern van Doavid.
+t Aigense symbool bestaait oet n passer dij n houklat kruust, mit voakentieds ien t midden de letter G. Woar dit veur staait waiten veul boetenders nait. Der binnen theorien dat dit staait veur "Glorie van de Grote Geometer". Dit symbool wordt ook wel ien verbaand brocht mit t hexagram, zo as de steern van Doavid.
 
 == Opruir ==
-Deurdat de vrijmezzelders n organizoatsie vörmen dij nait ien t publieke zicht treedt, is der deur de aiwen hìn n hail ìnde spekuleerd worden over dizze groep. Onbekend moakt ja onbemind. Zo maint man dat de hogere groads vrijmezzelders veul macht hebben, veur en aachter de schaarms. Veul hoge luu, woaronder olle keunens, prinsen en tsaren wazzen lid, môr ook luu as [[George Washington]], [[Benjamin Franklin]] en aander hoge luu binnen/wazzen lid van de vrijmezzelderij.
+Deurdat de vrijmezzelders n organizoatsie vörmen dij nait ien t publieke zicht treedt, is der deur de aiwen hìn n hail ìnde spekuleerd worden over dizze groep. Onbekend moakt ja onbemind. Zo maint man dat de hogere groads vrijmezzelders veul macht hebben, veur en aachter de schaarms. Veul hoge luu, woaronder olle keunens, prinsen en tsaren wazzen lid, môr ook luu as [[George Washington]], [[Benjamin Franklin]] en aander hoge luu binnen/wazzen lid van de Vrijmezzelderij. 
 
-Der wordt ook n haile inde spekuleren doan dat de vrijmezzelders kennes hebben van hogere zoaken, zo as de [[Kabala]] en [[duvel]]aanbidden. Summegen proaten der in om dat n vrijmezzelders dij oprichter was van de [[Ku Klux Klan]], n Amerikoanse organizoatsie dij vernuimd worden is om heur rassistische gewèld. Volgens summege luu is os nait t haile verhoal vertèld, den de luu dij slachtovver wörren van de Ku Klux Klan wazzen nait zomôr luu, môr n bepoalde minderhaid dij man boeten de vrijmezzelderij holden wol. Dit is aans nait bewezen en kinnen hail goud leugens wezen. Men maint ook dat er veul luu binnen dij lid binnen van organizoatsies as [[Skull & Bones]] en de [[Bohemian Grove]] ook hoge groads vrijmezzelders. Ook zol de vrijmezzelderij verbondschop hebben mit de [[Illuminati]] order oet [[Baiern]], wat tegenswoordeg n woord is dij bruukt wordt veur elk dij verdocht wordt van n komplot veur n wereldregeren.
+Der wordt ook n haile inde spekuleren doan dat de vrijmezzelders kennes hebben van hogere zoaken, zo as de [[Kabala]] en [[duvel]]aanbidden. Summegen proaten der in om dat n vrijmezzelders dij oprichter was van de [[Ku Klux Klan]], n Amerikoanse organizoatsie dij vernuimd worden is om heur rassistische gewèld. Volgens summege luu is os nait t haile verhoal vertèld, den de luu dij slachtovver wörren van de Ku Klux Klan wazzen nait zomôr luu, môr n bepoalde minderhaid dij man boeten de vrijmezzelderij holden wol. Dit is aans nait bewezen en kinnen hail goud leugens wezen. Men maint ook dat er veul luu binnen dij lid binnen van organizoatsies as [[Skull & Bones]] en de [[Bohemian Grove]] ook hoge groads vrijmezzelders. Ook zol de vrijmezzelderij verbondschop hebben mit de [[Illuminati]] order oet [[Baiern]], wat tegenswoordeg n woord is dij bruukt wordt veur elk dij verdocht wordt van n komplot veur n wereldregeren. Waitenschoppeliek bewies veur dizze verhoalen ontbrekt totoal. 
 
-Deur t aal meer opkommen van de komplottheorien en deur ontkrachtens doarvan ien de bouken van [[Dan Brown]], kommen de vrijmezzelders ook weer ien aandocht.
+Deur meer openhaid deur Vrijmezzelders en t aal meer opkommen van de komplottheorien en deur ontkrachtens doarvan ien de bouken van [[Dan Brown]], kommen de vrijmezzelders ook weer ien aandocht.
 
 [[Kattegerie:Vrijmezzelderij]]
 
