--- a/Corbin_Bleu.mw
+++ b/Corbin_Bleu.mw
@@ -1,6 +1,6 @@
 [[Ofbeelding: CorbinBleuDec06.jpg|thumb|right|200px|Corbin Bleu in 2006]]
 
-'''Corbin Bleu Reivers''' ([[Brooklyn]] in [[Niej-York]], [[21 febrewaori]] [[1989]]), was nen [[Amerika]]ansen popzänger, daanser en muziekskriewer. 
+'''Corbin Bleu Reivers''' ([[Brooklyn]] in [[Niej-York]], [[21 febrewaori]] [[1989]]), is nen [[Amerika]]ansen popzänger, daanser en muziekskriewer. 
 
 == Platenriege ==
 
