[[Indo-Europese talen|]] → [[Indo-Uropese taolen|]]

--- a/Nederduuts.mw
+++ b/Nederduuts.mw
@@ -22,7 +22,7 @@ Neffens aanderen slaot et op et noordoosten van Nederlaand en op et noorden van 
 Weer aanderen numen zo de taelen en dialekten van et noorden van Duutslaand en van et volledige Nederlaanse taelgebied (Nederduuts in roemere betekenisse).
 
 ==Onderverdeling==
-*[[Indo-Europese talen|Indo-Germaanse]] - [[Indo-Europese talen|Indo-Europees]]
+*[[Indo-Uropese taolen|Indo-Europees]]
 **[[Germaanse talen|Germaans]]
 ***[[West-Germaans]]
 ****Nederduuts
